@@ -1,0 +1,12 @@
+libsystemd-daemon.so.0 libsystemd-daemon0 #MINVER#
+ LIBSYSTEMD_DAEMON_31@LIBSYSTEMD_DAEMON_31 31
+ sd_booted@LIBSYSTEMD_DAEMON_31 31
+ sd_is_fifo@LIBSYSTEMD_DAEMON_31 31
+ sd_is_mq@LIBSYSTEMD_DAEMON_31 31
+ sd_is_socket@LIBSYSTEMD_DAEMON_31 31
+ sd_is_socket_inet@LIBSYSTEMD_DAEMON_31 31
+ sd_is_socket_unix@LIBSYSTEMD_DAEMON_31 31
+ sd_is_special@LIBSYSTEMD_DAEMON_31 31
+ sd_listen_fds@LIBSYSTEMD_DAEMON_31 31
+ sd_notify@LIBSYSTEMD_DAEMON_31 31
+ sd_notifyf@LIBSYSTEMD_DAEMON_31 31
