@@ -1,0 +1,3 @@
+usr/lib/libsystemd-login.so
+usr/lib/pkgconfig/libsystemd-login.pc
+usr/include/systemd/sd-login.h
